--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -5,37 +5,37 @@ driver:
 
 lint: |
     yamllint .
-    ansible-lint
+    ansible-lint .
 
 platforms:
 
-  # - name: centos-7
-  #   image: paulfantom/centos-molecule:7
-  #   docker_host: "${DOCKER_HOST:-unix://run/docker.sock}"
-  #   privileged: true
-  #   volumes:
-  #     - /sys/fs/cgroup:/sys/fs/cgroup:ro
+  - name: centos-7
+    image: paulfantom/centos-molecule:7
+    docker_host: "${DOCKER_HOST:-unix://run/docker.sock}"
+    privileged: true
+    volumes:
+      - /sys/fs/cgroup:/sys/fs/cgroup:ro
 
-  # - name: centos-8
-  #   image: paulfantom/centos-molecule:8
-  #   docker_host: "${DOCKER_HOST:-unix://run/docker.sock}"
-  #   privileged: true
-  #   volumes:
-  #     - /sys/fs/cgroup:/sys/fs/cgroup:ro
+  - name: centos-8
+    image: paulfantom/centos-molecule:8
+    docker_host: "${DOCKER_HOST:-unix://run/docker.sock}"
+    privileged: true
+    volumes:
+      - /sys/fs/cgroup:/sys/fs/cgroup:ro
 
-  # - name: ubuntu-18
-  #   image: paulfantom/ubuntu-molecule:18.04
-  #   docker_host: "${DOCKER_HOST:-unix://run/docker.sock}"
-  #   privileged: true
-  #   volumes:
-  #     - /sys/fs/cgroup:/sys/fs/cgroup:ro
+  - name: ubuntu-18
+    image: paulfantom/ubuntu-molecule:18.04
+    docker_host: "${DOCKER_HOST:-unix://run/docker.sock}"
+    privileged: true
+    volumes:
+      - /sys/fs/cgroup:/sys/fs/cgroup:ro
 
-  # - name: debian-9
-  #   image: paulfantom/debian-molecule:9
-  #   docker_host: "${DOCKER_HOST:-unix://run/docker.sock}"
-  #   privileged: true
-  #   volumes:
-  #     - /sys/fs/cgroup:/sys/fs/cgroup:ro
+  - name: debian-9
+    image: paulfantom/debian-molecule:9
+    docker_host: "${DOCKER_HOST:-unix://run/docker.sock}"
+    privileged: true
+    volumes:
+      - /sys/fs/cgroup:/sys/fs/cgroup:ro
 
   - name: debian-10
     image: paulfantom/debian-molecule:10
