--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,22 +1,30 @@
 ---
-dependencies: []
 
 galaxy_info:
   author: Bodo Schulz
   description: MariaDB Server for debian (Ubuntu), RedHat (CentOS) and Arch Linux.
   company: ""
   license: "license (BSD, MIT)"
-  min_ansible_version: 2.2
+  min_ansible_version: 2.9
   platforms:
     - name: Ubuntu
       versions:
-        - 16.04
-        - 18.04
+        # 18.04
+        - bionic
+        # 20.04
+        - focal
     - name: Debian
       versions:
+        # 9
+        - etch
+        # 10
+        - buster
+    - name: EL
+      versions:
         - 8
-        - 9
-        - 10
     - name: Archlinux
+
   galaxy_tags:
     - database
+
+dependencies: []
