--- a/molecule/use-external-repository/molecule.yml
+++ b/molecule/use-external-repository/molecule.yml
@@ -1,66 +1,32 @@
 ---
+dependency:
+  name: galaxy
 
 driver:
   name: docker
 
 lint: |
-    yamllint .
-    ansible-lint
+  set -e
+  yamllint .
+  ansible-lint .
+  flake8 .
 
 platforms:
-
-  - name: centos-7
-    image: paulfantom/centos-molecule:7
-    docker_host: "${DOCKER_HOST:-unix://run/docker.sock}"
+  - name: instance
+    image: "diodonfrost/ansible-${MOLECULE_DISTRO:-debian}:${MOLECULE_VERSION:-10}"
+    command: ${MOLECULE_DOCKER_COMMAND:-""}
     privileged: true
-    volumes:
-      - /sys/fs/cgroup:/sys/fs/cgroup:ro
-
-  - name: centos-8
-    image: paulfantom/centos-molecule:8
-    docker_host: "${DOCKER_HOST:-unix://run/docker.sock}"
-    privileged: true
-    volumes:
-      - /sys/fs/cgroup:/sys/fs/cgroup:ro
-
-  - name: ubuntu-18
-    image: paulfantom/ubuntu-molecule:18.04
-    docker_host: "${DOCKER_HOST:-unix://run/docker.sock}"
-    privileged: true
-    volumes:
-      - /sys/fs/cgroup:/sys/fs/cgroup:ro
-
-  # - name: debian-9
-  #   image: paulfantom/debian-molecule:9
-  #   docker_host: "${DOCKER_HOST:-unix://run/docker.sock}"
-  #   privileged: true
-  #   volumes:
-  #     - /sys/fs/cgroup:/sys/fs/cgroup:ro
-
-  - name: debian-10
-    image: paulfantom/debian-molecule:10
-    docker_host: "${DOCKER_HOST:-unix://run/docker.sock}"
-    privileged: true
-    volumes:
-      - /sys/fs/cgroup:/sys/fs/cgroup:ro
+    pre_build_image: true
 
 provisioner:
   name: ansible
+  ansible_args:
+    - --diff
+    # - -vvv
   config_options:
     defaults:
-      host_key_checking: False
       deprecation_warnings: True
       stdout_callback: yaml
-    diff:
-     always: True
-
-  lint:
-    name: ansible-lint
-  playbooks:
-    create: create.yml
-    prepare: prepare.yml
-    converge: playbook.yml
-    destroy: destroy.yml
 
 scenario:
   test_sequence:
