--- a/tox.ini
+++ b/tox.ini
@@ -1,25 +1,30 @@
 [tox]
 minversion = 1.8
 
-envlist =
-    lint
-    check
-    py{35,36,37}-ansible{27,28,29}-{functional,unit}
+envlist = py{37,38,39}-ansible{28,29,210}
 
 skipsdist = true
 
 [travis:env]
 ANSIBLE=
-  2.7: ansible27
+  2.8: ansible28
+  2.9: ansible29
+
+[gh-actions]
+ansible =
   2.8: ansible28
   2.9: ansible29
   2.10: ansible210
 
+python =
+    3.7: py37
+    3.8: py38
+    3.9: py39
+
 [testenv]
 passenv = *
 deps =
-    -rtest-requirements.txt
-    ansible27: ansible>=2.7,<2.8
+    -r test-requirements.txt
     ansible28: ansible>=2.8,<2.9
     ansible29: ansible>=2.9,<2.10
     ansible210: ansible>=2.10,<2.11
