--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -79,13 +79,12 @@ jobs:
 
       - name: test with tox
         run: |
-          tox -e ${{ TOX_ENV }} -- molecule test
+          tox -e py$(printf "${{ matrix.python-version }}" | tr -d '.')-ansible$(printf "${{ matrix.ansible-version }}" | tr -d '.') -- molecule test
         env:
           PY_COLORS: '1'
           ANSIBLE_FORCE_COLOR: '1'
           MOLECULE_DISTRO: ${{ matrix.distribution.image }}
           MOLECULE_VERSION: ${{ matrix.distribution.version }}
-          TOX_ENV: py$(printf "${{ matrix.python-version }}" | tr -d '.')-ansible$(printf "${{ matrix.ansible-version }}" | tr -d '.')
 
   ubuntu:
     name: ubuntu
