fix build problems with debian9 and python2

--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -12,7 +12,7 @@ lint: |
   flake8 .
 
 platforms:
-  - name: instance
+  - name: "instance-${MOLECULE_DISTRO:-debian}-${MOLECULE_VERSION:-10}"
     image: "diodonfrost/ansible-${MOLECULE_DISTRO:-debian}:${MOLECULE_VERSION:-10}"
     command: ${MOLECULE_DOCKER_COMMAND:-""}
     privileged: true
