--- a/molecule/default/prepare.yml
+++ b/molecule/default/prepare.yml
@@ -1,9 +1,68 @@
 ---
+
+- name: raw task to install python3
+  hosts: all
+  gather_facts: false
+
+  pre_tasks:
+    - name: Install python3 for ansible
+      raw: test -e /usr/bin/python3 || (apt-get -y update && apt install -y python3)
+      register: output
+      changed_when: output.stdout | length != 0
+
+    - name: Install pip3 for ansible
+      raw: test -e /usr/bin/pip3 || (apt-get -y update && apt install -y  python3-pip)
+      register: output
+      changed_when: output.stdout | length != 0
+
 - name: prepare container
   hosts: all
   gather_facts: true
 
   pre_tasks:
+    - name: detect python3
+      stat:
+        path: /usr/bin/python3
+      register: __stat_present_python3
+      changed_when: not __stat_present_python3.stat.exists
+
+    - name: set python3
+      set_fact:
+        ansible_python_interpreter: /usr/bin/python3
+      when:
+        - ansible_python.version.major == 2
+        - __stat_present_python3.stat.exists
+
+    - name: Gathering Facts now
+      setup:
+
+    - block:
+        - name: Install required packages on debian
+          apt:
+            # name:
+            #   # required to add key to apt keyring
+            #   - gnupg
+            #   # required to verify icinga2 is running
+            #   - procps
+            update_cache: true
+
+        # https://github.com/Icinga/icinga-packaging/issues/153
+        - name: Install backports repository on debian stretch
+          apt_repository:
+            repo: deb http://deb.debian.org/debian {{ ansible_distribution_release }}-backports main
+            state: present
+            update_cache: true
+          when:
+            - ansible_distribution_release == 'stretch'
+
+        - name: Install apt-transport-https on older debian/ubuntu versions
+          apt:
+            name:
+              - apt-transport-https
+          when:
+            - ansible_distribution_release in ['jessie', 'stretch', 'xenial']
+
+      when: ansible_os_family | lower == 'debian'
 
     - debug:
         msg:
