--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -12,8 +12,8 @@ lint: |
   flake8 .
 
 platforms:
-  - name: "instance-${MOLECULE_DISTRO:-debian}-${MOLECULE_VERSION:-10}"
-    image: "diodonfrost/ansible-${MOLECULE_DISTRO:-debian}:${MOLECULE_VERSION:-10}"
+  - name: "instance-${MOLECULE_DISTRIBUTION:-debian:10}"
+    image: "diodonfrost/ansible-${MOLECULE_DISTRIBUTION:-debian:10}"
     command: ${MOLECULE_DOCKER_COMMAND:-""}
     privileged: true
     pre_build_image: true
