--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -88,7 +88,7 @@ jobs:
         env:
           PY_COLORS: '1'
           ANSIBLE_FORCE_COLOR: '1'
-          MOLECULE_DISTRIBUTION: ${{ matrix.distribution }}
+          MOLECULE_DISTRIBUTION: $(printf "${{ matrix.distribution }} | tr -d '.')
 
   ubuntu:
     name: ubuntu
@@ -138,7 +138,7 @@ jobs:
         env:
           PY_COLORS: '1'
           ANSIBLE_FORCE_COLOR: '1'
-          MOLECULE_DISTRIBUTION: ${{ matrix.distribution }}
+          MOLECULE_DISTRIBUTION: $(printf "${{ matrix.distribution }} | tr -d '.')
 
 #   centos:
 #     name: centos
