--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -12,7 +12,7 @@ lint: |
   flake8 .
 
 platforms:
-  - name: "instance-${MOLECULE_DISTRIBUTION:-debian:10}"
+  - name: instance
     image: "diodonfrost/ansible-${MOLECULE_DISTRIBUTION:-debian:10}"
     command: ${MOLECULE_DOCKER_COMMAND:-""}
     privileged: true
