change molecule tests

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -137,50 +137,45 @@ jobs:
         env:
           PY_COLORS: '1'
           ANSIBLE_FORCE_COLOR: '1'
+          MOLECULE_DISTRIBUTION: ${{ matrix.distribution.image }}
 
-#   centos:
-#     name: centos
-#     runs-on: ubuntu-latest
-#     strategy:
-#       fail-fast: false
-#       matrix:
-#         distribution:
-#           - image: centos
-#             version: 7
-#           - image: centos
-#             version: 8
-#         python-version:
-#           - '3.8'
-#           - '3.9'
-#         ansible-version:
-#           - '2.9'
-#           - '2.10'
-#
-#     steps:
-#       - name: check out the codebase.
-#         uses: actions/checkout@v2
-#         with:
-#           path: 'ansible-mariadb'
-#
-#       - name: set up python ${{ matrix.python-version }}
-#         uses: actions/setup-python@v2
-#         with:
-#           python-version: ${{ matrix.python-version }}
-#
-#       - name: install dependencies
-#         run: |
-#           python -m pip install --upgrade pip
-#
-#       - name: install test dependencies.
-#         run: pip install -r test-requirements.txt
-#
-#       - name: test with tox
-#         run: |
-#           tox -e py$(printf "${{ matrix.python-version }}" | tr -d '.')-ansible$(printf "${{ matrix.ansible-version }}" | tr -d '.') -- molecule converge
-#           tox -e py$(printf "${{ matrix.python-version }}" | tr -d '.')-ansible$(printf "${{ matrix.ansible-version }}" | tr -d '.') -- molecule verify
-#           tox -e py$(printf "${{ matrix.python-version }}" | tr -d '.')-ansible$(printf "${{ matrix.ansible-version }}" | tr -d '.') -- molecule destroy
-#         env:
-#           PY_COLORS: '1'
-#           ANSIBLE_FORCE_COLOR: '1'
-#           MOLECULE_DISTRO: ${{ matrix.distribution.image }}
-#           MOLECULE_VERSION: ${{ matrix.distribution.version }}
+  centos:
+    name: centos
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        distribution:
+          - image: centos:8
+        python-version:
+          - '3.8'
+          - '3.9'
+        ansible-version:
+          - '2.9'
+          - '2.10'
+
+    steps:
+      - name: check out the codebase.
+        uses: actions/checkout@v2
+        with:
+          path: 'ansible-mariadb'
+
+      - name: set up python ${{ matrix.python-version }}
+        uses: actions/setup-python@v2
+        with:
+          python-version: ${{ matrix.python-version }}
+
+      - name: install dependencies
+        run: |
+          python -m pip install --upgrade pip
+
+      - name: install test dependencies.
+        run: pip install -r test-requirements.txt
+
+      - name: test with tox
+        run: |
+          tox -e py$(printf "${{ matrix.python-version }}" | tr -d '.')-ansible$(printf "${{ matrix.ansible-version }}" | tr -d '.') -- molecule test
+        env:
+          PY_COLORS: '1'
+          ANSIBLE_FORCE_COLOR: '1'
+          MOLECULE_DISTRIBUTION: ${{ matrix.distribution.image }}
