--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,40 +14,18 @@ defaults:
     working-directory: 'ansible-mariadb'
 
 jobs:
-
-  lint:
-    name: Lint
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: check out the codebase.
-        uses: actions/checkout@v2
-        with:
-          path: 'ansible-mariadb'
-
-      - name: set up python.
-        uses: actions/setup-python@v2
-        with:
-          python-version: '3.x'
-
-      - name: install test dependencies.
-        run: pip install -r test-requirements.txt
-
-      - name: Lint code.
-        run: |
-          yamllint .
-          ansible-lint .
-          flake8 .
-
-  debian:
-    name: debian
-    runs-on: ubuntu-latest
+  tests:
+    name: "${{ matrix.image }} / python: ${{ matrix.python-version }}, ansible: ${{ matrix.ansible-version }}"
+    runs-on: ubuntu-18.04
     strategy:
       fail-fast: false
       matrix:
-        distribution:
+        image:
           - debian:9
           - debian:10
+          - ubuntu:18.04
+          - centos:8
+          - oraclelinux:8
         python-version:
           - '3.8'
           - '3.9'
@@ -69,9 +47,7 @@ jobs:
       - name: install dependencies
         run: |
           python -m pip install --upgrade pip
-
-      - name: install test dependencies.
-        run: pip install -r test-requirements.txt
+          pip install -r test-requirements.txt
 
       # See: https://github.com/geerlingguy/ansible-role-mysql/issues/422
       - name: Disable AppArmor on Debian.
@@ -80,7 +56,7 @@ jobs:
             sudo apt-get install apparmor-profiles
             sudo ln -s /etc/apparmor.d/usr.sbin.mysqld /etc/apparmor.d/disable/
             sudo apparmor_parser -R /etc/apparmor.d/usr.sbin.mysqld
-        if: ${{ startsWith(matrix.distribution, 'debian') }}
+        if: ${{ startsWith(matrix.distribution, 'debian') or startsWith(matrix.distribution, 'ubuntu') }}
 
       - name: test with tox
         run: |
@@ -90,93 +66,94 @@ jobs:
           ANSIBLE_FORCE_COLOR: '1'
           MOLECULE_DISTRIBUTION: ${{ matrix.distribution }}
 
-  ubuntu:
-    name: ubuntu
-    runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        distribution:
-          - ubuntu:18.04
-          - ubuntu:20.04
-        python-version:
-          - '3.8'
-          - '3.9'
-        ansible-version:
-          - '2.9'
-          - '2.10'
-
-    steps:
-      - name: check out the codebase.
-        uses: actions/checkout@v2
-        with:
-          path: 'ansible-mariadb'
-
-      - name: set up python ${{ matrix.python-version }}
-        uses: actions/setup-python@v2
-        with:
-          python-version: ${{ matrix.python-version }}
-
-      - name: install dependencies
-        run: |
-          python -m pip install --upgrade pip
-
-      - name: install test dependencies.
-        run: pip install -r test-requirements.txt
-
-      - name: Disable AppArmor on Debian.
-        run: |
-            set -x
-            sudo apt-get install apparmor-profiles
-            sudo ln -s /etc/apparmor.d/usr.sbin.mysqld /etc/apparmor.d/disable/
-            sudo apparmor_parser -R /etc/apparmor.d/usr.sbin.mysqld
-        if: ${{ startsWith(matrix.distribution, 'ubuntu') }}
-
-      - name: test with tox
-        run: |
-          tox -e py$(printf "${{ matrix.python-version }}" | tr -d '.')-ansible$(printf "${{ matrix.ansible-version }}" | tr -d '.') -- molecule test
-        env:
-          PY_COLORS: '1'
-          ANSIBLE_FORCE_COLOR: '1'
-          MOLECULE_DISTRIBUTION: ${{ matrix.distribution }}
-
-  centos:
-    name: centos
-    runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        distribution:
-          - centos:8
-        python-version:
-          - '3.8'
-          - '3.9'
-        ansible-version:
-          - '2.9'
-          - '2.10'
-
-    steps:
-      - name: check out the codebase.
-        uses: actions/checkout@v2
-        with:
-          path: 'ansible-mariadb'
-
-      - name: set up python ${{ matrix.python-version }}
-        uses: actions/setup-python@v2
-        with:
-          python-version: ${{ matrix.python-version }}
-
-      - name: install dependencies
-        run: |
-          python -m pip install --upgrade pip
-
-      - name: install test dependencies.
-        run: pip install -r test-requirements.txt
-
-      - name: test with tox
-        run: |
-          tox -e py$(printf "${{ matrix.python-version }}" | tr -d '.')-ansible$(printf "${{ matrix.ansible-version }}" | tr -d '.') -- molecule test
-        env:
-          PY_COLORS: '1'
-          ANSIBLE_FORCE_COLOR: '1'
-          MOLECULE_DISTRIBUTION: ${{ matrix.distribution }}
+#   ubuntu:
+#     name: ubuntu
+#     runs-on: ubuntu-latest
+#     strategy:
+#       fail-fast: false
+#       matrix:
+#         distribution:
+#           - ubuntu:18.04
+#           - ubuntu:20.04
+#         python-version:
+#           - '3.8'
+#           - '3.9'
+#         ansible-version:
+#           - '2.9'
+#           - '2.10'
+#
+#     steps:
+#       - name: check out the codebase.
+#         uses: actions/checkout@v2
+#         with:
+#           path: 'ansible-mariadb'
+#
+#       - name: set up python ${{ matrix.python-version }}
+#         uses: actions/setup-python@v2
+#         with:
+#           python-version: ${{ matrix.python-version }}
+#
+#       - name: install dependencies
+#         run: |
+#           python -m pip install --upgrade pip
+#
+#       - name: install test dependencies.
+#         run: pip install -r test-requirements.txt
+#
+#       - name: Disable AppArmor on Debian.
+#         run: |
+#             set -x
+#             sudo apt-get install apparmor-profiles
+#             sudo ln -s /etc/apparmor.d/usr.sbin.mysqld /etc/apparmor.d/disable/
+#             sudo apparmor_parser -R /etc/apparmor.d/usr.sbin.mysqld
+#         if: ${{ startsWith(matrix.distribution, 'ubuntu') }}
+#
+#       - name: test with tox
+#         run: |
+#           tox -e py$(printf "${{ matrix.python-version }}" | tr -d '.')-ansible$(printf "${{ matrix.ansible-version }}" | tr -d '.') -- molecule test
+#         env:
+#           PY_COLORS: '1'
+#           ANSIBLE_FORCE_COLOR: '1'
+#           MOLECULE_DISTRIBUTION: ${{ matrix.distribution }}
+#
+#   centos:
+#     name: centos
+#     runs-on: ubuntu-latest
+#     strategy:
+#       fail-fast: false
+#       matrix:
+#         distribution:
+#           - centos:8
+#         python-version:
+#           - '3.8'
+#           - '3.9'
+#         ansible-version:
+#           - '2.9'
+#           - '2.10'
+#
+#     steps:
+#       - name: check out the codebase.
+#         uses: actions/checkout@v2
+#         with:
+#           path: 'ansible-mariadb'
+#
+#       - name: set up python ${{ matrix.python-version }}
+#         uses: actions/setup-python@v2
+#         with:
+#           python-version: ${{ matrix.python-version }}
+#
+#       - name: install dependencies
+#         run: |
+#           python -m pip install --upgrade pip
+#
+#       - name: install test dependencies.
+#         run: pip install -r test-requirements.txt
+#
+#       - name: test with tox
+#         run: |
+#           tox -e py$(printf "${{ matrix.python-version }}" | tr -d '.')-ansible$(printf "${{ matrix.ansible-version }}" | tr -d '.') -- molecule test
+#         env:
+#           PY_COLORS: '1'
+#           ANSIBLE_FORCE_COLOR: '1'
+#           MOLECULE_DISTRIBUTION: ${{ matrix.distribution }}
+#
