--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -13,18 +13,19 @@ lint: |
 
 platforms:
   - name: instance
-    image: "diodonfrost/ansible-${MOLECULE_DISTRIBUTION:-debian:10}"
+    image: "diodonfrost/ansible-${DISTRIBUTION:-debian:10}"
     command: ${MOLECULE_DOCKER_COMMAND:-""}
-    volumes:
-      - /sys/fs/cgroup:/sys/fs/cgroup:ro
+    docker_host: "${DOCKER_HOST:-unix://run/docker.sock}"
     privileged: true
     pre_build_image: true
+    volumes:
+      - /sys/fs/cgroup:/sys/fs/cgroup:ro
 
 provisioner:
   name: ansible
   ansible_args:
     - --diff
-    - -vv
+    # - -vvv
   config_options:
     defaults:
       deprecation_warnings: True
