--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -56,7 +56,7 @@ jobs:
             sudo apt-get install apparmor-profiles
             sudo ln -s /etc/apparmor.d/usr.sbin.mysqld /etc/apparmor.d/disable/
             sudo apparmor_parser -R /etc/apparmor.d/usr.sbin.mysqld
-        if: ${{ startsWith(matrix.distribution, 'debian') or startsWith(matrix.distribution, 'ubuntu') }}
+        if: ${{ startsWith(matrix.distribution, 'debian') || startsWith(matrix.distribution, 'ubuntu') }}
 
       - name: test with tox
         run: |
