--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -59,7 +59,7 @@ jobs:
             sudo ln -s /etc/apparmor.d/usr.sbin.mysqld /etc/apparmor.d/disable/
             sudo apparmor_parser -R /etc/apparmor.d/usr.sbin.mysqld
       - name: Disable AppArmor on Ubunto.
-        if: ${{ startsWith(matrix.distribution, 'debian') }}
+        if: ${{ startsWith(matrix.distribution, 'ubuntu') }}
         run: |
             set -x
             sudo apt-get install apparmor-profiles
