--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,10 +21,10 @@ jobs:
       fail-fast: false
       matrix:
         image:
-          - debian:9
-          - debian:10
-          - ubuntu:18.04
-          - ubuntu:20.04
+          #- debian:9
+          #- debian:10
+          #- ubuntu:18.04
+          #- ubuntu:20.04
           - centos:8
           - oraclelinux:8
         python-version:
@@ -66,6 +66,12 @@ jobs:
             sudo apt-get install apparmor-profiles
             sudo ln -s /etc/apparmor.d/usr.sbin.mysqld /etc/apparmor.d/disable/
             sudo apparmor_parser -R /etc/apparmor.d/usr.sbin.mysqld
+
+      - name: Disable SELinux on centos
+        if: ${{ startsWith(matrix.image, 'centos') }}
+        run: |
+            set -x
+            setenforce 0
 
       - name: test with tox
         run: |
