--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -25,3 +25,8 @@
   include_tasks: users.yml
 
 # - include_tasks: replication.yml
+
+- name: ensure mariadb is enabled on boot
+  service:
+    name: '{{ mariadb_service }}'
+    enabled: true
