--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,24 +51,7 @@ jobs:
           pip install -r test-requirements.txt
 
       # See: https://github.com/geerlingguy/ansible-role-mysql/issues/422
-      - name: Disable AppArmor on Debian.
-        if: ${{ startsWith(matrix.image, 'debian') }}
-        run: |
-            set -x
-            sudo apt-get install apparmor-profiles
-            sudo ln -s /etc/apparmor.d/usr.sbin.mysqld /etc/apparmor.d/disable/
-            sudo apparmor_parser -R /etc/apparmor.d/usr.sbin.mysqld
-
-      - name: Disable AppArmor on Ubuntu.
-        if: ${{ startsWith(matrix.image, 'ubuntu') }}
-        run: |
-            set -x
-            sudo apt-get install apparmor-profiles
-            sudo ln -s /etc/apparmor.d/usr.sbin.mysqld /etc/apparmor.d/disable/
-            sudo apparmor_parser -R /etc/apparmor.d/usr.sbin.mysqld
-
-      - name: Disable SELinux on centos
-        if: ${{ startsWith(matrix.image, 'centos') }}
+      - name: Disable AppArmor
         run: |
             set -x
             sudo apt-get install apparmor-profiles
