--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,10 +21,10 @@ jobs:
       fail-fast: false
       matrix:
         image:
-          #- debian:9
-          #- debian:10
-          #- ubuntu:18.04
-          #- ubuntu:20.04
+          - debian:9
+          - debian:10
+          - ubuntu:18.04
+          - ubuntu:20.04
           - centos:8
           - oraclelinux:8
         python-version:
