--- a/tasks/configure.yml
+++ b/tasks/configure.yml
@@ -87,6 +87,23 @@
     mode: 0755
   when: mariadb_pid_file is defined and mariadb_pid_file | length != 0
 
+# - block:
+#     - name: create {{ systemd_lib_directory }}/{{ mariadb_service }}.service.d
+#       file:
+#         path: "{{ systemd_lib_directory }}/{{ mariadb_service }}.service.d"
+#         state: directory
+#         mode: 0750
+#
+#     - name: create overwrite.conf for systemd
+#       template:
+#         src: systemd/overwrite.conf.j2
+#         dest: "{{ systemd_lib_directory }}/{{ mariadb_service }}.service.d/override.conf"
+#         mode: 0440
+#       notify:
+#         - systemctl daemon-reload
+#
+#   when:
+#     - ansible_service_mgr == "systemd"
 
 - block:
     - name: create slow query log file
@@ -137,4 +154,13 @@
   service:
     name: '{{ mariadb_service }}'
     state: started
-    enabled: true
+  register: service_status
+  notify:
+    - wait 20 seconds for clean startup
+
+- debug:
+    var: "{{ item }}"
+  when: item is defined
+  loop:
+    - service_status.state
+    - service_status.failed
