--- a/vars/main.yml
+++ b/vars/main.yml
@@ -1,5 +1,10 @@
 ---
 
+_systemd_lib_directory:
+  default: /lib/systemd/system
+  debian: /lib/systemd/system
+  redhat: /usr/lib/systemd/system
+
 _mariadb_packages:
   default:
     - libmariadb-dev
@@ -8,12 +13,7 @@ _mariadb_packages:
     - python3-mysqldb
   archlinux:
     - mariadb
-  redhat: []
-  redhat-7:
-    - MySQL-python
-    - mariadb-devel
-    - mariadb-server
-  centos:
+  redhat:
     - MariaDB-client
     - MariaDB-devel
     - MariaDB-server
@@ -23,36 +23,17 @@ _mariadb_packages:
     - python3-setuptools
     - python36-devel
     - redhat-rpm-config
-  centos-7:
-    - MySQL-python
+  redhat-8:
     - gcc
     - make
-    - mariadb-devel
+    - mariadb
+    - mariadb-common
     - mariadb-server
-    - python-setuptools   # for python2
-    - python3-devel
-    - python3-setuptools
-    - redhat-rpm-config
-  centos-7-external:
-    - MariaDB-client
-    - MariaDB-devel
-    - MariaDB-server
-    - MariaDB-shared
-    - MySQL-python
-    - gcc
-    - make
-    - python3-devel
-    - python3-setuptools
-    - redhat-rpm-config
-  centos-8:
-    - gcc
-    - make
     - mariadb-devel
-    - mariadb-server
     - python3-devel
     - python3-setuptools
     - redhat-rpm-config
-  centos-8-external:
+  redhat-8-external:
     - MariaDB-client
     - MariaDB-devel
     - MariaDB-server
@@ -74,28 +55,21 @@ _mariadb_packages:
     - python3-mysqldb
     - python3-pip
     - python3-setuptools
-  ubuntu-16:
-    - libmariadb-dev
-    - mariadb-server
-    - python3-mysqldb
-    - python3-pip
-    - python3-setuptools
 
 
 _mariadb_python_packages:
   default:
-    - mysqlclient
+    - name: mysqlclient
   debian:
-    - mysqlclient
+    - name: mysqlclient
   redhat:
-    - mysqlclient
+    - name: mysqlclient
 
 _mariadb_service:
-  default: mysql
+  default: mariadb
   archlinux: mariadb
-  redhat: mysqld
-  centos: mariadb
-  debian: mysql
+  redhat: mariadb
+  debian: mariadb
 
 _mariadb_messages_dir:
   default: /usr/share/mysql
@@ -107,6 +81,10 @@ _mariadb_socket:
   centos: /var/lib/mysql/mysql.sock
   debian: /run/mysqld/mysqld.sock
 
+systemd_lib_directory: "{{
+          _systemd_lib_directory[ansible_os_family | lower] |
+  default(_systemd_lib_directory['default']) }}"
+
 mariadb_log_directory: /var/log/mysql
 mariadb_slow_query_log_file: "{{ mariadb_log_directory }}/mysql-slow.log"
 mariadb_log_error: "{{ mariadb_log_directory }}/mysql.error"
@@ -116,24 +94,23 @@ mariadb_pid_file: /run/mysqld/mysqld.pid
 mariadb_config_dir: /etc/mysql
 mariadb_config_include_dir: "{{ mariadb_config_dir }}/conf.d"
 
-
 mariadb_packages: "{{
-          _mariadb_packages[ansible_distribution | lower~ '-' ~ ansible_distribution_major_version ~ '-external' if mariadb_use_external_repo else '' ] |
-  default(_mariadb_packages[ansible_distribution | lower~ '-' ~ ansible_distribution_major_version] |
-  default(_mariadb_packages[ansible_os_family | lower ~ '-' ~ ansible_distribution_major_version] |
+          _mariadb_packages[ansible_os_family | lower ~ '-' ~ ansible_distribution_major_version] |
   default(_mariadb_packages[ansible_os_family | lower] |
+  default(_mariadb_packages[ansible_distribution | lower~ '-' ~ ansible_distribution_major_version ~ '-external' if mariadb_use_external_repo else '' ] |
+  default(_mariadb_packages[ansible_distribution | lower~ '-' ~ ansible_distribution_major_version] |
   default(_mariadb_packages[ansible_distribution | lower] |
   default(_mariadb_packages['default']))))) }}"
 
 mariadb_python_packages: "{{
-          _mariadb_python_packages[ansible_distribution | lower~ '-' ~ ansible_distribution_major_version] |
-  default(_mariadb_python_packages[ansible_os_family | lower~ '-' ~ ansible_distribution_major_version] |
+          _mariadb_python_packages[ansible_os_family | lower~ '-' ~ ansible_distribution_major_version] |
   default(_mariadb_python_packages[ansible_os_family | lower] |
+  default(_mariadb_python_packages[ansible_distribution | lower~ '-' ~ ansible_distribution_major_version] |
   default(_mariadb_python_packages['default']))) }}"
 
 mariadb_service: "{{
-          _mariadb_service[ansible_distribution | lower ] |
-  default(_mariadb_service[ansible_os_family | lower] |
+          _mariadb_service[ansible_os_family | lower] |
+  default(_mariadb_service[ansible_distribution | lower ] |
   default(_mariadb_service['default'])) }}"
 
 mariadb_messages_dir: "{{
