--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -57,7 +57,7 @@ jobs:
           - ubuntu:20.04
           - centos:8
           - oraclelinux:8
-          - archlinux:latest
+          # - archlinux:latest
         python-version:
           - '3.8'
           - '3.9'
