--- a/tasks/detect_mariadb_version.yml
+++ b/tasks/detect_mariadb_version.yml
@@ -62,7 +62,8 @@
     msg: mariadb_version is missing
     quiet: true
 
-- debug:
+- name: mariadb version
+  debug:
     msg:
       - "mariadb version: {{ mariadb_short_version }} - {{ mariadb_version }}"
   when: mariadb_version | default("") | string | length != 0
