--- a/tasks/replication.yml
+++ b/tasks/replication.yml
@@ -1,4 +1,5 @@
 ---
+
 - name: Ensure replication user exists on master.
   mysql_user:
     name: "{{ mariadb_replication_user.name }}"
@@ -6,10 +7,11 @@
     password: "{{ mariadb_replication_user.password }}"
     priv: "{{ mariadb_replication_user.priv | default('*.*:REPLICATION SLAVE,REPLICATION CLIENT') }}"
     state: present
-  when: >
-    (mariadb_replication_role == 'master')
-    and mariadb_replication_user
-    and (mariadb_replication_master | length != 0)
+  no_log: true
+  when:
+    - mariadb_replication_role == 'master'
+    - mariadb_replication_user
+    - mariadb_replication_master | length != 0
 
 - name: Check slave replication status.
   mysql_replication:
@@ -18,19 +20,20 @@
     login_password: "{{ mariadb_replication_user.password }}"
   ignore_errors: true
   register: slave
-  when: >
-    mariadb_replication_role == 'slave'
-    and (mariadb_replication_master | length != 0)
+  no_log: true
+  when:
+    - mariadb_replication_role == 'slave'
+    - mariadb_replication_master | length != 0
 
 - name: Check master replication status.
   mysql_replication:
     mode: getmaster
   delegate_to: "{{ mariadb_replication_master }}"
   register: master
-  when: >
-    ((slave.Is_Slave is defined and not slave.Is_Slave) or (slave.Is_Slave is not defined and slave|failed))
-    and (mariadb_replication_role == 'slave')
-    and (mariadb_replication_master | length != 0)
+  when:
+    - (slave.Is_Slave is defined and not slave.Is_Slave) or (slave.Is_Slave is not defined and slave|failed)
+    - (mariadb_replication_role == 'slave')
+    - (mariadb_replication_master | length != 0)
 
 - name: Configure replication on the slave.
   mysql_replication:
@@ -40,12 +43,14 @@
     master_password: "{{ mariadb_replication_user.password }}"
     master_log_file: "{{ master.File }}"
     master_log_pos: "{{ master.Position }}"
-  ignore_errors: true
-  when: >
-    ((slave.Is_Slave is defined and not slave.Is_Slave) or (slave.Is_Slave is not defined and slave|failed))
-    and (mariadb_replication_role == 'slave')
-    and (mariadb_replication_master | length != 0)
-    and mariadb_replication_user
+  # ignore_errors: true
+  failed_when: true
+  no_log: true
+  when:
+    - (slave.Is_Slave is defined and not slave.Is_Slave) or (slave.Is_Slave is not defined and slave|failed)
+    - mariadb_replication_role == 'slave'
+    - mariadb_replication_master | length != 0
+    - mariadb_replication_user
 
 - name: Start replication.
   mysql_replication:
